--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
   "require": {
     "php": ">=7.1",
     "ext-json" : "*",
-    "ext-curl" : "*",
-    "codeception/codeception": "^2.2"
+    "ext-curl" : "*"
   },
   "autoload": {
     "psr-4": {
